# premiere-pro-folder-watcher

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  index.html  index.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  uxp.config.ts  vite.config.ts
implementation-details/: 02-storage-service.md
modules/: binary.js  premiere.js  storage.js  websocket.js
rust-watcher/: Cargo.toml
rust-watcher/src/: filter.rs  lib.rs  main.rs  protocol.rs  server.rs  watcher.rs
scripts/: build.sh
src/: app.css  globals.ts  index-react.tsx  main.tsx
src/api/: api.ts  filesystem.ts  premierepro.ts  uxp.ts
src/api/utils/: premierepro-utils.ts
src/services/: scanner.ts  storage.ts
src/types/: ppro.d.ts  watcher.ts
