[package]
name = "folder-watcher"
version = "1.0.0"
edition = "2021"
description = "File system watcher for Premiere Pro folder watching plugin"
authors = ["Your Name"]
license = "MIT"

[[bin]]
name = "folder-watcher"
path = "src/main.rs"

[lib]
name = "folder_watcher"
path = "src/lib.rs"

[dependencies]
notify = "8.2"
notify-debouncer-mini = "0.7"
tungstenite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
